--- a/src/main/resources/templates/board/boardWrite.html
+++ b/src/main/resources/templates/board/boardWrite.html
@@ -15,7 +15,8 @@
         <div class="jumbotron">
             <h2>게시판 등록</h2>
         </div>
-        <form action="/board/insertBoard.do" method="POST">
+        <!-- enctype="multipart/form-data"를 통해서 파일 업로드 데이터를 전송함 -->
+        <form action="/board/insertBoard.do" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="text">제목</label>
                 <input type="text" id="title" name="title" class="form-control">
@@ -27,6 +28,10 @@
             <div class="form-group">
                 <label for="contents">내용 : </label>
                 <textarea name="contents" id="contents" cols="30" rows="10" class="form-control"></textarea>
+            </div>
+            <div class="form-group">
+            <!-- 파일을 첨부할 수 있는 input태그, multiple 속성을 추가하여 여러개의 파일 첨부 가능, multipledms html5에서만 사용 가능 -->
+            	<input type="file" id="files" name="files" multiple="multiple" class="form-control-file border">
             </div>
             <div class="d-flex justify-contents-end">
             	<button class="btn btn-primary" type="submit">OK</button>
